# panduza-cxx

./: .clang-format  .clang-tidy  .conanfile.py.swp  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build.sh  conanfile.py  docker.sh  run.sh  toto.sh  version.h.in
.github/workflows/: build.yml
cmake/: compiler.cmake  cppcheck.cmake  dependencies.cmake  format.cmake  lib.cmake  tidy.cmake  version.cmake
conan_profiles/: linux_clang  linux_gcc  win_mingw  x86_64_Cross_Windows  x86_64_Linux
docker/: Dockerfile  build.sh
examples/: CMakeLists.txt  bps.cxx  conanfile.txt  psu.cxx  test.cxx
include/pza/core/: client.hxx  core.hxx  device.hxx  interface.hxx  utils.hxx
include/pza/interfaces/: ammeter.hxx  bpc.hxx  bps_chan_ctrl.hxx  device.hxx  meter.hxx  platform.hxx  voltmeter.hxx
scripts/: .install_dependencies.sh.swp  build.sh  docker_pull.sh  docker_registry.sh  format.sh  install_dependencies.sh
source/: CMakeLists.txt  version.hxx.in
source/core/: Alias.cxx  Alias.hxx  Attribute.cxx  Attribute.hxx  Client.cxx  Client.hxx  Core.cxx  Core.hxx  Field.cxx  Field.hxx  Interface.cxx  Interface.hxx  Topic.cxx  Topic.hxx  attribute.cxx  attribute.hxx  client.cxx  client.hxx  core.cxx  core.hxx  device.cxx  device.hxx  field.hxx  interface.cxx  interface.hxx  interface_factory.cxx  interface_factory.hxx  mqtt_service.hxx  scanner.cxx  scanner.hxx  version.cxx.in
source/interfaces/: Psu.cxx  Psu.hxx  ammeter.cxx  bpc.cxx  bps_chan_ctrl.cxx  bps_chan_ctrl.hxx  device.cxx  meter.cxx  meter.hxx  platform.cxx  voltmeter.cxx
source/pza/: version.hxx
source/pza/core/: Alias.cxx  Alias.hxx  Attribute.cxx  Attribute.hxx  Client.cxx  Client.hxx  Core.cxx  Core.hxx  Field.cxx  Field.hxx  Interface.cxx  Interface.hxx  Topic.cxx  Topic.hxx  attribute.cxx  attribute.hxx  client.cxx  client.hxx  core.cxx  core.hxx  device.cxx  device.hxx  device_factory.cxx  device_factory.hxx  field.hxx  grouped_interface.hxx  interface.cxx  interface.hxx
source/pza/devices/: bps.cxx  bps.hxx  orphan.cxx  orphan.hxx
source/pza/interfaces/: Psu.cxx  Psu.hxx  bps_chan_ctrl.cxx  bps_chan_ctrl.hxx  meter.cxx  meter.hxx
source/pza/utils/: Utils.cxx  Utils.hxx  json.cxx  json.hxx  string.cxx  string.hxx  topic.cxx  topic.hxx
source/pza/xbuild/: dllexport.h  fnmatch.c  fnmatch.h  getopt.c  getopt.h  unistd.h
source/utils/: Utils.cxx  Utils.hxx  interface_group.cxx  json.cxx  json.hxx  json_attribute.cxx  json_attribute.hxx  topic.cxx  topic.hxx
test/: CMakeLists.txt  alias.cxx  connection.cxx  interface.cxx  psu.cxx  tree.json
test/alias/: good.json
test/alias/folder_multiple/: good2.json
test/alias/folder_multiple_duplicate/: good2.json
test/alias/folder_single/: good.json
test/unit/: core.cxx
